--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "tsx src/server.ts",
     "start:dev": "tsx watch src/server.ts",
     "build": "tsup src",
-    "test": "vitest"
+    "test": "vitest",
+    "coverage": "vitest run --coverage"
   },
   "keywords": [],
   "author": "",
@@ -24,7 +25,7 @@
     "tsup": "^6.5.0",
     "tsx": "^3.12.2",
     "typescript": "^4.9.4",
-    "vitest": "^0.27.3",
+    "vitest": "^0.28.4",
     "zod": "^3.20.2"
   },
   "dependencies": {
